--- a/public/getInfo.html
+++ b/public/getInfo.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-  <title>LooksMatch - Welcom</title>
+  <title>Perfect Match</title>
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/5499/5499242.png" type="image/x-icon">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="mycss.css">
@@ -19,7 +19,7 @@
   <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
       <div class="container-fluid">
           <iconify-icon icon="ph:eye-light" width="30" height="30" style="margin-right: 10px;margin-left: 50px; "></iconify-icon>
-          <a class="navbar-brand" href="index.html">Looks Match</a>
+          <a class="navbar-brand" href="index.html">Perfect Match</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                   aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
           </div>
       </div>
   </nav>
-<body>
+<body style="background: url(store.jpg);background-size: cover; background-repeat: no-repeat;">
     <div class="container d-flex" style="margin-top: 100px;justify-content: space-between;">
         <div class="camera-block">
             <select id="cameraSelector" class="form-select"></select>
@@ -54,7 +54,7 @@
   setTimeout(function() {
     // Replace 'target_page.html' with the desired destination URL
     window.location.href = 'detail.html';
-  }, 10000); // 10000 milliseconds = 10 seconds
+  }, 20000); // 10000 milliseconds = 10 seconds
 };
     const video = document.getElementById('videoElement');
     const captureButton = document.getElementById('captureButton');
@@ -111,7 +111,7 @@
     setTimeout(function() {
   // Replace 'target_page.html' with the desired destination URL
   window.location.href = 'detail.html';
-}, 12000);
+}, 20000);
     //   const image = new Image();
     //   image.src = canvas.toDataURL('image/png');
     
