--- a/public/detail.html
+++ b/public/detail.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-  <title>LooksMatch - Welcom</title>
+  <title>Perfect Match</title>
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/5499/5499242.png" type="image/x-icon">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="mycss.css">
-  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css' asp-append-version="true">
+  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" asp-append-version="true" />
   <script src="bootstrap.bundle.min.js"></script>
   <script src="myscript.js"></script>
@@ -19,7 +19,7 @@
   <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
       <div class="container-fluid">
           <iconify-icon icon="ph:eye-light" width="30" height="30" style="margin-right: 10px;margin-left: 50px; "></iconify-icon>
-          <a class="navbar-brand" href="index.html">Looks Match</a>
+          <a class="navbar-brand" href="index.html">Perfect Match</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                   aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -30,13 +30,30 @@
           </div>
       </div>
   </nav>
-<body>
-    <div class="container d-flex flex-direction">
-        <div class="d-flex text-group justify-content-between">
-            <p class="text-bold" style="margin: auto;">Length:</p>
-            <p style="margin: auto 5px;">26,5cm</p>
+<body style="background: url(store.jpg);background-size: cover; background-repeat: no-repeat;">
+    <div class="container w-50" style="flex-direction: column;background-color: #fff; margin-top: 100px;padding: 20px;border-radius: 30px;">
+        <h2 style="text-align: center; margin: 20px;">Your foot information</h2>
+        <div class="d-flex text-group">
+            <p class="text-bold" style="margin-right: 25px;">Length:</p>
+            <p>25,9cm</p>
         </div>
-
+        <div class="d-flex text-group">
+            <p class="text-bold" style="margin-right: 25px;">Witdh:</p>
+            <p>9,5cm</p>
+        </div>
+        <div class="d-flex text-group">
+            <p class="text-bold" style="margin-right: 25px;">Foot arches:</p>
+            <span>
+                <img src="low.png" style="height: 80px;">
+            </span>
+        </div>
+        <div class="d-flex text-group">
+            <p class="text-bold" style="margin-right: 25px;">Foot shape:</p>
+            <span>
+                <img src="greek-foot.jpg" style="height: 80px;">
+            </span>
+        </div>
+        <button type="button" id="showBtn" type="button" class="btn btn-primary btn-lg" style="border-radius: 10px;margin-left: 240px;">Show recommend products</button>
     </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
