--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-  <title>LooksMatch - Welcom</title>
+  <title>Perfect Match - Welcom</title>
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/5499/5499242.png" type="image/x-icon">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="mycss.css">
@@ -19,7 +19,7 @@
   <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
       <div class="container-fluid">
           <iconify-icon icon="ph:eye-light" width="30" height="30" style="margin-right: 10px;margin-left: 50px; "></iconify-icon>
-          <a class="navbar-brand" href="tryon.html">Looks Match</a>
+          <a class="navbar-brand" href="tryon.html">Perfect Match</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                   aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
 <body style="background: url(store.jpg);background-size: cover; background-repeat: no-repeat;">
     <div class="container index-page w-50">
         <div style="margin-top: 250px;">
-                <h2>Welcome to LooksMatch</h2>
+                <h2>Welcome to PerfectMatch</h2>
                 <p>An online platform that utilizes augmented reality and image recognition technology to enable users to virtually try on various styles of shoes using their device's camera. It offers a realistic and interactive experience, allowing users to visualize how different shoes look on their feet without physically trying them on.</p> 
                 <p>Continued use of this platform signifies your acceptance of our <a href="privacy.html">Privary Policy</a>.</p>  
                 <button id="getStartBtn" type="button" class="btn btn-primary btn-lg" style="width: 130px;border-radius: 30px;margin: 10px;">Get start</button>  
